style: allow table cells to wrap text to prevent horizontal overflow

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -257,6 +257,8 @@ main {
 
         td {
           @extend %table-cell;
+
+          white-space: normal;
         }
       }
     } /* tbody */
